--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     // Spring Security
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
 
+    // https://mvnrepository.com/artifact/net.coobird/thumbnailator / 썸네일
+    implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.19'
 
     // JPA 관련 툴
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
